Fixinf pre tag for text wrapping

--- a/css/quips.css
+++ b/css/quips.css
@@ -563,3 +563,10 @@ a, h1 a { color: #36393B; text-decoration-color: #8E8D75; text-decoration: under
         .beach {
             color:#EFECCA;
         }
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
